Package: aroma.core
===================

Version: 3.2.0-9000 [2019-11-29]

MISCELLANEOUS:

 * WORKAROUND: Package fails 'R CMD check' with _R_CHECK_LENGTH_1_LOGIC2_=true
   due PR#17663 (https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17663).
   A simple code tweak avoids this us hitting this bug.
   

Version: 3.2.0 [2019-06-17]

BUG FIXES:

 * findByChipType() for AromaMicroarrayTabularBinaryFile and TextUnitNamesFile
   would only recognize Windows Shortcut Links with a filename extension in
   lower case (*.lnk) but not in upper case (*.LNK).


Version: 3.1.3 [2018-04-30]
 
BUG FIXES:

 * Imported extract() from R.utils instead of R.filesets, which would result
   in R CMD check errors for aroma.affymetrix with R-devel (>= 3.6.0).
 

Version: 3.1.2 [2018-04-23]
 
WORKAROUND:

 * For R (>= 3.6.0), don't run examples or tests that rely on the Bioconductor
   package 'GLAD' or the legacy R-Forge package 'expectile' because they do
   not properly registered S3 generic function.


Version: 3.1.1 [2017-09-12]

BUG FIXES:

 * getRegions() for CopyNumberSegmentationModel used future strategy 'eager'
   that is defunct in future (>= 1.6.0) - updated to 'sequential'.


Version: 3.1.0 [2017-03-22]

NEW FEATURES:

 * Now file sizes are reported using IEC binary prefixes, i.e. bytes, KiB,
   MiB, GiB, TiB, ..., YiB.

 * Now genomic positions / distances are reported in 'Mbp' (was 'MB' and 'Mb').

 * Objects no longer report on memory (RAM) usage.

BUG FIXES:

 * Package used %<=% internally with was deprecated in future (>= 1.4.0).
   
 * exportTotalCnRatioSet() for AromaUnitTotalCnBinarySet and
   exportFracBDiffSet() for AromaUnitFracBCnBinarySet would return files with
   file names matching `.asb`, which would incorrectly also include `.asb.md5`
   files. Thanks to Thomas Grombacher at the Merck Group for the report.

DEPRECATED AND DEFUNCT:

 * Default method whatDataType() is now defunct.
 